# tux-client

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  install.sh  main.cpp  noteslistwindow.cpp  noteslistwindow.h  notesmanager.cpp  notesmanager.h  org.devendev.TuxIt.metainfo.xml  org.devendev.TuxIt.yaml  resources.qrc  setupwizard.cpp  stickywindow.cpp  uninstall.sh
.flatpak-builder/cache/refs/heads/x86_64-org.devendev.TuxIt.yaml/: build-tux-it  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-org.devendev.TuxIt.yaml
.github/workflows/: release.yml
src/: istorageprovider.h  localstorageprovider.cpp  localstorageprovider.h  notemodel.h  noteslistwindow.cpp  noteslistwindow.h  notesmanager.cpp  notesmanager.h  setupwizard.cpp  setupwizard.h  stickywindow.cpp  stickywindow.h  syncmanager.cpp  syncmanager.h  syncqrcodedialog.cpp  syncqrcodedialog.h  updatemanager.cpp  updatemanager.h
